WIP - updating game modes

--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
     <main>
       <section class="choose-game-area">
         <button class="btn">
-          <a href="./singlePlayer.html">SINGLE PLAYER</a>
+          <a href="./singleplayer.html">SINGLE PLAYER</a>
         </button>
         <button class="btn">
-          <a href="./multiPlayer.html">MULTI-PLAYER</a>
+          <a href="./multiplayer.html">MULTI-PLAYER</a>
         </button>
       </section>
     </main>
