--- a/singleplayer.html
+++ b/singleplayer.html
@@ -13,8 +13,8 @@
     <header>
       <h1 class="title">Noughts & Crosses - Single-Player</h1>
       <h2 class="current-player"></h2>
-      <p class="player-score">Player score:</p>
-      <p class="computer-score">Computer score:</p>
+      <!-- <p class="player-score">Player score:</p>
+      <p class="computer-score">Computer score:</p> -->
     </header>
     <main>
       <section class="game-area">
