--- a/multiplayer.html
+++ b/multiplayer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="game.css" />
-    <script src="./mulitplayer.js" defer></script>
+    <script src="./multiplayer.js" defer></script>
     <title>Noughts & Crosses - Multi-Player</title>
   </head>
 
